--- a/problems/tabbed_content.html
+++ b/problems/tabbed_content.html
@@ -4,7 +4,7 @@
 	<title>Frontend Coding Test</title>
 	<link type="text/css" rel="stylesheet" href="../css/style.css" />
 	<style type="text/css">
-		.picture {
+		.tabs {
 			background-color: #F9F9F9;
 			border: 1px solid #CCCCCC; padding: 3px;
 			text-align: center;
@@ -17,6 +17,45 @@
 			border: 1px solid #CCCCCC;
 			vertical-align:middle; margin-bottom: 3px;
 		}
+		.button1
+        {
+            border: solid 1px silver;
+            color: #11518F;
+            height: 30px;
+        }
+        .btnActive
+        {
+            border: solid 1px silver;
+            color: #11518F;
+            height: 33px;
+            z-index: 2;
+            background-color: White;
+            border-bottom-color: White;
+        }
+        .btnInactive
+        {
+            border: solid 1px silver;
+            color: #11518F;
+            height: 30px;
+            z-index: 0;
+            border-bottom-color: Silver;
+        }
+        .divHide
+        {
+            z-index: 0;
+            display: none;
+            border: 1px solid silver;
+            margin-top: -5px;
+        }
+        .divFirst
+        {
+            z-index: 1;
+            display: block;
+            border: 1px solid silver;
+            margin-top: -5px;
+        }
+		
+		
 	</style>
 </head>
 <body>	
@@ -32,9 +71,45 @@
 			Using HTML, CSS, and JavaScript, create a functional tabbed content container in the div below.  Each tab should contain different content, and content should change when clicking on a different tab.
 		</p>
 
-		<div class="picture">
-			<img src="../img/tabbed_content.png" />
-			<p>Example of a tabbed content container.</p>
+		<div class="tabs">
+			<form id="form1">
+	        <table>
+	            <tr align="left">
+	                <td>
+	                    <input type="button" class="button1" id="btnTab1" value="Tab1" onclick="show(this);" />
+	                </td>
+	                <td>
+	                    <input type="button" class="button1" id="btnTab2" value="Tab2" onclick="show(this);" />
+	                </td>
+	                <td>
+	                    <input type="button" class="button1" id="btnTab3" value="Tab3" onclick="show(this)" />
+	                </td>
+	                
+	            </tr>
+	        </table>
+	        <table style="font-size: 16px;" width="100%" cellpadding="0" cellspacing="0">
+	            <tr>
+	                <td>
+	                    <div id="div1" class="divFirst">
+	                    <p>
+							Gingerbread muffin gummies gingerbread macaroon. Lollipop candy applicake toffee faworki. Bear claw topping jelly toffee toffee powder tiramisu candy chupa chups. Chupa chups dragee icing applicake chupa chups dessert. Croissant jelly faworki marzipan tootsie roll marshmallow. Marshmallow toffee sweet roll fruitcake.
+						</p>
+	                    </div>
+	                    <div id="div2" class="divHide">
+	                    <p>
+							Chocolate faworki croissant brownie halvah macaroon gummi bears wypas. Chupa chups icing gummies pudding dessert carrot cake. Cupcake jelly beans sweet roll icing ice cream apple pie tootsie roll gummi bears marzipan. Brownie gummies chupa chups pie. Cupcake jujubes topping. 
+						</p>
+	                    </div>
+	                    <div id="div3" class="divHide">
+	                    <p>
+							Cheesecake jelly beans ice cream lollipop sweet pastry. Chupa chups dessert cheesecake sesame snaps. Cookie ice cream candy canes pastry cake muffin. Icing chocolate sweet gummi bears powder oat cake oat cake lemon drops.
+						</p>
+	                    </div>
+	                    
+	                </td>
+	            </tr>
+	        </table>
+        </form>
 		</div>
 
 		<hr/>
@@ -58,5 +133,43 @@
 			</p>
 		</div>
 	</div>
+	<script>
+		var a = new Array("div1", "div2", "div3");
+        var b = new Array("btnTab1", "btnTab2", "btnTab3");
+        function show(e) {
+            var i = 0;
+            var j = 1;
+            for (var t = 0; t < b.length; t++) {
+                if (b[t] == e.id) {
+                    i = t;
+                    if (i > 0) {
+                        j = 0;
+                    }
+                    else {
+                        j = i + 1;
+                    }
+                    break;
+                }
+            }
+            e.setAttribute("class", "btnActive");
+            for (var k = 0; k < b.length; k++) {
+                if (k == i && (document.getElementById(a[k]) != null)) {
+                    document.getElementById(a[k]).style.display = "block";
+                    if (i == j)
+                        j = i + 1;
+                }
+                else {
+                    if (document.getElementById(a[k]) != null) {
+                        document.getElementById(a[j]).style.display = "none";
+                        document.getElementById(b[j]).setAttribute("class", "btnInactive");
+                        j = j + 1;
+                    }
+                }
+            }
+        }
+        window.onload = function () {
+            document.getElementById(b[0]).setAttribute("class", "btnActive");
+        }
+        </script>
 </body>
 </html>
